// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Schema > should hide table / sequences without problems 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte"><button class="bullet svelte">+</button> tab1ok</li>
  <li class="svelte"><button class="bullet svelte">+</button> tab2ok</li>
  <li class="svelte">
    <button class="bullet red svelte">+</button> tab3missing
    <span class="red svelte">missing</span>
    <label><input type="checkbox" />create</label>
  </li>
  <li class="svelte"><button class="bullet svelte">+</button> tab4ok</li>
  <li class="svelte"><button class="bullet svelte">+</button> tab5ok</li>
  <li class="svelte">
    <button disabled="" class="bullet svelte">.</button>
    <span class="nodeType svelte">sequence</span> seq1ok someType<button
      class="clipboard svelte"
      title="someType"
    >
      ▢
    </button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
  <li class="svelte">
    <button disabled="" class="bullet svelte">.</button>
    <span class="nodeType svelte">sequence</span> seq2ok someType<button
      class="clipboard svelte"
      title="someType"
    >
      ▢
    </button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
  <li class="svelte">
    <button disabled="" class="bullet yellow svelte">.</button>
    <span class="nodeType svelte">sequence</span> seq3missing
    <span class="yellow svelte">unused</span>
    <label><input type="checkbox" />drop</label> someType<button
      class="clipboard svelte"
      title="someType"
    >
      ▢
    </button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
  <li class="svelte">
    <button disabled="" class="bullet svelte">.</button>
    <span class="nodeType svelte">sequence</span> seq4ok someType<button
      class="clipboard svelte"
      title="someType"
    >
      ▢
    </button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
</ul>
"
`;

exports[`Schema > should hide table / sequences without problems 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button disabled="" class="bullet svelte">.</button> tab1ok ... tab2ok
    <small>(2)</small>
  </li>
  <li class="svelte">
    <button class="bullet red svelte">+</button> tab3missing
    <span class="red svelte">missing</span>
    <label><input type="checkbox" />create</label>
  </li>
  <li class="svelte">
    <button disabled="" class="bullet svelte">.</button> tab4ok ... tab5ok
    <small>(2)</small>
  </li>
  <li class="svelte">
    <button disabled="" class="bullet svelte">.</button>
    <span class="nodeType svelte">sequence</span> seq1ok ... seq2ok
    <small>(2)</small>
  </li>
  <li class="svelte">
    <button disabled="" class="bullet yellow svelte">.</button>
    <span class="nodeType svelte">sequence</span> seq3missing
    <span class="yellow svelte">unused</span>
    <label><input type="checkbox" />drop</label> someType<button
      class="clipboard svelte"
      title="someType"
    >
      ▢
    </button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
  <li class="svelte">
    <button disabled="" class="bullet svelte">.</button>
    <span class="nodeType svelte">sequence</span> seq4ok
  </li>
</ul>
"
`;

exports[`Schema > should join ALTER TABLE statements on the same table 1`] = `
"<li class="svelte">
  "ALTER TABLE \\"myTableName\\" ADD COLUMN \\"myColumn1Name\\" string," +
</li>
<li class="more svelte">"ADD COLUMN \\"myColumn2Name\\" string," +</li>
<li class="more svelte">"ADD COLUMN \\"myColumn3Name\\" string",</li>
"
`;

exports[`Schema > should join ALTER TABLE statements on the same table 2`] = `
"<li class="svelte">
  "ALTER TABLE \\"myTableName\\" ADD COLUMN \\"myColumn1Name\\" string",
</li>
<li class="svelte">
  "ALTER TABLE \\"myTableName\\" ADD COLUMN \\"myColumn2Name\\" string",
</li>
<li class="svelte">
  "ALTER TABLE \\"myTableName\\" ADD COLUMN \\"myColumn3Name\\" string",
</li>
"
`;

exports[`Schema > should patches encoded for java 1`] = `
"<li class="svelte">"CREATE TABLE \\"myTable1Name\\"",</li>
"
`;

exports[`Schema > should patches encoded for java 2`] = `
"<li class="svelte">CREATE TABLE "myTable1Name";</li>
"
`;

exports[`Schema > should render a column with a wrong type 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />adjust columns with type mismatch
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a column with a wrong type 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />adjust columns with type mismatch
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button class="bullet red svelte">+</button> myColumn1Name
        <span class="red svelte">type mismatch</span>
        <label><input type="checkbox" />adjust</label>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a column with a wrong type 3`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />adjust columns with type mismatch
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button class="bullet red svelte">-</button> myColumn1Name
        <span class="red svelte">type mismatch:</span>
        <label><input type="checkbox" />adjust</label>
        <table class="comparison svelte">
          <tbody>
            <tr>
              <td class="svelte">required:</td>
              <td class="svelte">
                myColumn1Type<button
                  class="clipboard svelte"
                  title="myColumn1Type"
                >
                  ▢
                </button>
              </td>
            </tr>
            <tr>
              <td class="svelte">actual:</td>
              <td class="svelte">
                myColumn1TypeX<button
                  class="clipboard svelte"
                  title="myColumn1TypeX"
                >
                  ▢
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a column with a wrong type 4`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet redFixed svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />adjust columns with type mismatch
    <small>(1/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet redFixed svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button class="bullet redFixed svelte">-</button> myColumn1Name
        <span class="redFixed svelte">type mismatch:</span>
        <label><input type="checkbox" />adjust</label>
        <table class="comparison svelte">
          <tbody>
            <tr>
              <td class="svelte">required:</td>
              <td class="svelte">
                myColumn1Type<button
                  class="clipboard svelte"
                  title="myColumn1Type"
                >
                  ▢
                </button>
              </td>
            </tr>
            <tr>
              <td class="svelte">actual:</td>
              <td class="svelte">
                myColumn1TypeX<button
                  class="clipboard svelte"
                  title="myColumn1TypeX"
                >
                  ▢
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a column with a wrong type 5`] = `
"<li class="svelte">
  "ALTER TABLE myTable1Name ALTER myColumn1Name TYPE myColumn1Type",
</li>
"
`;

exports[`Schema > should render a column with an additional error 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a column with an additional error 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button class="bullet red svelte">+</button> myColumn1Name
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a column with an additional error 3`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button class="bullet red svelte">-</button> myColumn1Name
        myColumn1Type<button class="clipboard svelte" title="myColumn1Type">
          ▢
        </button>
        <ul>
          <li class="svelte">additionalErrors1</li>
          <li class="svelte">additionalErrors2</li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a connect button 1`] = `
"<button>connect</button>
"
`;

exports[`Schema > should render a connect button 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">+</button> myTable1Name
    <span class="red svelte">missing</span>
    <label><input type="checkbox" />create</label>
  </li>
</ul>
"
`;

exports[`Schema > should render a connect button 3`] = `
"<li class="svelte">"CREATE TABLE myTable1Name",</li>
"
`;

exports[`Schema > should render a constraint with a wrong clause 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />recreate constraints with clause mismatch
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a constraint with a wrong clause 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />recreate constraints with clause mismatch
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button disabled="" class="bullet red svelte">.</button>
        <span class="nodeType svelte">check</span> myConstraint1Name<button
          class="clipboard svelte"
          title="myConstraint1Name"
        >
          ▢
        </button>
        <span class="red svelte">clause mismatch:</span>
        <label><input type="checkbox" />recreate</label>
        <table class="comparison svelte">
          <tbody>
            <tr>
              <td class="svelte">required:</td>
              <td class="svelte">
                myConstraint1Clause<button
                  class="clipboard svelte"
                  title="myConstraint1Clause"
                >
                  ▢
                </button>
              </td>
            </tr>
            <tr>
              <td class="svelte">actual:</td>
              <td class="svelte">
                myConstraint1ClauseX<button
                  class="clipboard svelte"
                  title="myConstraint1ClauseX"
                >
                  ▢
                </button>
              </td>
            </tr>
            <tr>
              <td class="svelte">raw:</td>
              <td class="svelte">
                myConstraint1ClauseX Raw<button
                  class="clipboard svelte"
                  title="myConstraint1ClauseX Raw"
                >
                  ▢
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a constraint with a wrong clause 3`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet redFixed svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />recreate constraints with clause mismatch
    <small>(1/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet redFixed svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button disabled="" class="bullet redFixed svelte">.</button>
        <span class="nodeType svelte">check</span> myConstraint1Name<button
          class="clipboard svelte"
          title="myConstraint1Name"
        >
          ▢
        </button>
        <span class="redFixed svelte">clause mismatch:</span>
        <label><input type="checkbox" />recreate</label>
        <table class="comparison svelte">
          <tbody>
            <tr>
              <td class="svelte">required:</td>
              <td class="svelte">
                myConstraint1Clause<button
                  class="clipboard svelte"
                  title="myConstraint1Clause"
                >
                  ▢
                </button>
              </td>
            </tr>
            <tr>
              <td class="svelte">actual:</td>
              <td class="svelte">
                myConstraint1ClauseX<button
                  class="clipboard svelte"
                  title="myConstraint1ClauseX"
                >
                  ▢
                </button>
              </td>
            </tr>
            <tr>
              <td class="svelte">raw:</td>
              <td class="svelte">
                myConstraint1ClauseX Raw<button
                  class="clipboard svelte"
                  title="myConstraint1ClauseX Raw"
                >
                  ▢
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a constraint with a wrong clause 4`] = `
"<li class="svelte">
  "ALTER TABLE myTable1Name DROP CONSTRAINT myConstraint1Name",
</li>
<li class="svelte">
  "ALTER TABLE myTable1Name ADD CONSTRAINT myConstraint1Name",
</li>
"
`;

exports[`Schema > should render a constraint with an additional error 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a constraint with an additional error 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button disabled="" class="bullet red svelte">.</button>
        <span class="nodeType svelte">check</span> myConstraint1Name<button
          class="clipboard svelte"
          title="myConstraint1Name"
        >
          ▢
        </button>
        myConstraint1Clause<button
          class="clipboard svelte"
          title="myConstraint1Clause"
        >
          ▢
        </button>
        <ul>
          <li class="svelte">additionalErrors1</li>
          <li class="svelte">additionalErrors2</li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a constraint with shortener 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />recreate constraints with clause mismatch
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a constraint with shortener 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />recreate constraints with clause mismatch
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button class="bullet red svelte">+</button> myColumn1Name
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a constraint with shortener 3`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />recreate constraints with clause mismatch
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button class="bullet red svelte">-</button> myColumn1Name
        myColumn1Type<button class="clipboard svelte" title="myColumn1Type">
          ▢
        </button>
        <ul>
          <li class="svelte">
            <button disabled="" class="bullet red svelte">.</button>
            <span class="nodeType svelte">check</span> myConstraint1Name<button
              class="clipboard svelte"
              title="myConstraint1Name"
            >
              ▢
            </button>
            <span class="red svelte">clause mismatch:</span>
            <label><input type="checkbox" />recreate</label>
            <table class="comparison svelte">
              <tbody>
                <tr>
                  <td class="svelte">required:</td>
                  <td class="svelte">
                    (⬁) myConstraint1Clause<button
                      class="clipboard svelte"
                      title="(\`myColumn1Name\`) myConstraint1Clause"
                    >
                      ▢
                    </button>
                  </td>
                </tr>
                <tr>
                  <td class="svelte">actual:</td>
                  <td class="svelte">
                    (⬁) myConstraint1ClauseX<button
                      class="clipboard svelte"
                      title='("myColumn1Name") myConstraint1ClauseX'
                    >
                      ▢
                    </button>
                  </td>
                </tr>
                <tr>
                  <td class="svelte">raw:</td>
                  <td class="svelte">
                    (⬁) myConstraint1ClauseX Raw<button
                      class="clipboard svelte"
                      title='("myColumn1Name") myConstraint1ClauseX Raw'
                    >
                      ▢
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a minimal sequence 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button disabled="" class="bullet svelte">.</button>
    <span class="nodeType svelte">sequence</span> myOnlyName myType<button
      class="clipboard svelte"
      title="myType"
    >
      ▢
    </button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
</ul>
"
`;

exports[`Schema > should render a minimal table 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte"><button class="bullet svelte">+</button> myOnlyName</li>
</ul>
"
`;

exports[`Schema > should render a minimal table 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte"><button class="bullet svelte">-</button> myOnlyName</li>
</ul>
"
`;

exports[`Schema > should render a minimal table 3`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte"><button class="bullet svelte">-</button> myOnlyName</li>
</ul>
"
`;

exports[`Schema > should render a minimal table 4`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet svelte">+</button> myOnlyNameReloaded
  </li>
</ul>
"
`;

exports[`Schema > should render a missing column 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a missing column 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button class="bullet red svelte">+</button> myColumn1Name
        <span class="red svelte">missing</span>
        <label><input type="checkbox" />add</label>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a missing column 3`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button class="bullet red svelte">-</button> myColumn1Name
        <span class="red svelte">missing</span>
        <label><input type="checkbox" />add</label> myColumn1Type<button
          class="clipboard svelte"
          title="myColumn1Type"
        >
          ▢
        </button>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a missing column 4`] = `
"<li class="svelte">"ALTER TABLE myTable1Name ADD COLUMN myColumn1Name",</li>
"
`;

exports[`Schema > should render a missing column to be renamed to a unused 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTableName
    <ul>
      <li class="svelte">
        <button class="bullet red svelte">+</button> myMissingColumnName
        <span class="red svelte">missing</span>
        <label><input type="checkbox" />add</label>
        <label
          ><select class="renameFrom svelte">
            <option value="<NONE>">rename from ...</option>
            <option value="myUnusedColumnName">myUnusedColumnName</option>
            <option value="myUnusedColumnName2">myUnusedColumnName2</option>
          </select></label
        >
      </li>
      <li class="svelte">
        <button class="bullet red svelte">+</button> myUnusedColumnName
        <span class="red svelte">unused</span>
        <label><input type="checkbox" />drop</label>
        <label
          ><select class="renameTo svelte">
            <option value="<NONE>">rename to ...</option>
            <option value="myMissingColumnName">myMissingColumnName</option>
          </select></label
        >
      </li>
      <li class="svelte">
        <button class="bullet red svelte">+</button> myUnusedColumnName2
        <span class="red svelte">unused</span>
        <label><input type="checkbox" />drop</label>
        <label
          ><select class="renameTo svelte">
            <option value="<NONE>">rename to ...</option>
            <option value="myMissingColumnName">myMissingColumnName</option>
          </select></label
        >
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a missing column to be renamed to a unused 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTableName
    <ul>
      <li class="svelte">
        <button class="bullet red svelte">+</button> myMissingColumnName
        <span class="red svelte">missing</span>
        <label><input type="checkbox" />add</label>
        <label
          ><select class="renameFrom svelte">
            <option value="<NONE>">rename from ...</option>
            <option value="myUnusedColumnName">myUnusedColumnName</option>
            <option value="myUnusedColumnName2">myUnusedColumnName2</option>
          </select></label
        >
      </li>
      <li class="svelte">
        <button class="bullet redFixed svelte">+</button> myUnusedColumnName
        <span class="redFixed svelte">unused</span>
        <label><input type="checkbox" />drop</label>
        <label
          ><select class="renameTo svelte">
            <option value="<NONE>">rename to ...</option>
            <option value="myMissingColumnName">myMissingColumnName</option>
          </select></label
        >
      </li>
      <li class="svelte">
        <button class="bullet red svelte">+</button> myUnusedColumnName2
        <span class="red svelte">unused</span>
        <label><input type="checkbox" />drop</label>
        <label
          ><select class="renameTo svelte">
            <option value="<NONE>">rename to ...</option>
            <option value="myMissingColumnName">myMissingColumnName</option>
          </select></label
        >
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a missing column to be renamed to a unused 3`] = `
"<li class="svelte">
  "ALTER TABLE \\"myTableName\\" ALTER COLUMN \\"myUnusedColumnName\\" RENAME TO
  \\"myMissingColumnName\\"",
</li>
"
`;

exports[`Schema > should render a missing constraint 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a missing constraint 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button disabled="" class="bullet red svelte">.</button>
        <span class="nodeType svelte">check</span> myConstraint1Name<button
          class="clipboard svelte"
          title="myConstraint1Name"
        >
          ▢
        </button>
        <span class="red svelte">missing</span>
        <label><input type="checkbox" />add</label> myConstraint1Clause<button
          class="clipboard svelte"
          title="myConstraint1Clause"
        >
          ▢
        </button>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a missing constraint 3`] = `
"<li class="svelte">
  "ALTER TABLE myTable1Name ADD CONSTRAINT myConstraint1Name",
</li>
"
`;

exports[`Schema > should render a missing sequence 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button disabled="" class="bullet red svelte">.</button>
    <span class="nodeType svelte">sequence</span> myOnlyName
    <span class="red svelte">missing</span>
    <label><input type="checkbox" />create</label> myType<button
      class="clipboard svelte"
      title="myType"
    >
      ▢
    </button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
</ul>
"
`;

exports[`Schema > should render a missing sequence 2`] = `
"<li class="svelte">"CREATE SEQUENCE myOnlyName",</li>
"
`;

exports[`Schema > should render a missing sequence to be renamed to an unused 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button disabled="" class="bullet red svelte">.</button>
    <span class="nodeType svelte">sequence</span> myMissingSequenceName
    <span class="red svelte">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedSequenceName">myUnusedSequenceName</option>
        <option value="myUnusedSequenceName2">myUnusedSequenceName2</option>
      </select></label
    >
    someType<button class="clipboard svelte" title="someType">▢</button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
  <li class="svelte">
    <button disabled="" class="bullet yellow svelte">.</button>
    <span class="nodeType svelte">sequence</span> myUnusedSequenceName
    <span class="yellow svelte">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingSequenceName">myMissingSequenceName</option>
      </select></label
    >
    someType<button class="clipboard svelte" title="someType">▢</button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
  <li class="svelte">
    <button disabled="" class="bullet yellow svelte">.</button>
    <span class="nodeType svelte">sequence</span> myUnusedSequenceName2
    <span class="yellow svelte">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingSequenceName">myMissingSequenceName</option>
      </select></label
    >
    someType<button class="clipboard svelte" title="someType">▢</button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
</ul>
"
`;

exports[`Schema > should render a missing sequence to be renamed to an unused 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button disabled="" class="bullet red svelte">.</button>
    <span class="nodeType svelte">sequence</span> myMissingSequenceName
    <span class="red svelte">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedSequenceName">myUnusedSequenceName</option>
        <option value="myUnusedSequenceName2">myUnusedSequenceName2</option>
      </select></label
    >
    someType<button class="clipboard svelte" title="someType">▢</button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
  <li class="svelte">
    <button disabled="" class="bullet yellowFixed svelte">.</button>
    <span class="nodeType svelte">sequence</span> myUnusedSequenceName
    <span class="yellowFixed svelte">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingSequenceName">myMissingSequenceName</option>
      </select></label
    >
    someType<button class="clipboard svelte" title="someType">▢</button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
  <li class="svelte">
    <button disabled="" class="bullet yellow svelte">.</button>
    <span class="nodeType svelte">sequence</span> myUnusedSequenceName2
    <span class="yellow svelte">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingSequenceName">myMissingSequenceName</option>
      </select></label
    >
    someType<button class="clipboard svelte" title="someType">▢</button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
</ul>
"
`;

exports[`Schema > should render a missing sequence to be renamed to an unused 3`] = `
"<li class="svelte">
  "ALTER TABLE \\"myUnusedSequenceName\\" RENAME TO \\"myMissingSequenceName\\"",
</li>
"
`;

exports[`Schema > should render a missing table 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">+</button> myTable1Name
    <span class="red svelte">missing</span>
    <label><input type="checkbox" />create</label>
  </li>
</ul>
"
`;

exports[`Schema > should render a missing table 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />add missing nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTable1Name
    <span class="red svelte">missing</span>
    <label><input type="checkbox" />create</label>
  </li>
</ul>
"
`;

exports[`Schema > should render a missing table 3`] = `
"<li class="svelte">"CREATE TABLE myTable1Name",</li>
"
`;

exports[`Schema > should render a missing table and patch fails 1`] = `
"<li class="svelte">
  <span class="red svelte"
    >schema/alter?subject=table&amp;name=myTable1Name&amp;method=add: response
    code 400 myError</span
  >
</li>
"
`;

exports[`Schema > should render a missing table to be renamed to an unused 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">+</button> myMissingTableName
    <span class="red svelte">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedTableName">myUnusedTableName</option>
        <option value="myUnusedTableName2">myUnusedTableName2</option>
      </select></label
    >
  </li>
  <li class="svelte">
    <button class="bullet yellow svelte">+</button> myUnusedTableName
    <span class="yellow svelte">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingTableName">myMissingTableName</option>
      </select></label
    >
  </li>
  <li class="svelte">
    <button class="bullet yellow svelte">+</button> myUnusedTableName2
    <span class="yellow svelte">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingTableName">myMissingTableName</option>
      </select></label
    >
  </li>
</ul>
"
`;

exports[`Schema > should render a missing table to be renamed to an unused 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">+</button> myMissingTableName
    <span class="red svelte">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedTableName">myUnusedTableName</option>
        <option value="myUnusedTableName2">myUnusedTableName2</option>
      </select></label
    >
  </li>
  <li class="svelte">
    <button class="bullet yellowFixed svelte">+</button> myUnusedTableName
    <span class="yellowFixed svelte">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingTableName">myMissingTableName</option>
      </select></label
    >
  </li>
  <li class="svelte">
    <button class="bullet yellow svelte">+</button> myUnusedTableName2
    <span class="yellow svelte">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingTableName">myMissingTableName</option>
      </select></label
    >
  </li>
</ul>
"
`;

exports[`Schema > should render a missing table to be renamed to an unused 3`] = `
"<li class="svelte">
  "ALTER TABLE \\"myUnusedTableName\\" RENAME TO \\"myMissingTableName\\"",
</li>
"
`;

exports[`Schema > should render a multiple columns with a wrong type 1`] = `
"<button disabled="" class="bullet red svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />adjust columns with type mismatch
  <small>(0/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple columns with a wrong type 2`] = `
"<button disabled="" class="bullet red svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />adjust columns with type mismatch
  <small>(1/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple columns with a wrong type 3`] = `
"<button disabled="" class="bullet redFixed svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />adjust columns with type mismatch
  <small>(2/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple columns with a wrong type 4`] = `
"<button disabled="" class="bullet red svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />adjust columns with type mismatch
  <small>(0/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple columns with a wrong type 5`] = `
"<button disabled="" class="bullet redFixed svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />adjust columns with type mismatch
  <small>(2/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple columns with a wrong type 6`] = `
"<button disabled="" class="bullet red svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />adjust columns with type mismatch
  <small>(1/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple columns with a wrong type 7`] = `
"<button disabled="" class="bullet red svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />adjust columns with type mismatch
  <small>(0/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple constraints with a wrong clause 1`] = `
"<button disabled="" class="bullet red svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />recreate constraints with clause mismatch
  <small>(0/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple constraints with a wrong clause 2`] = `
"<button disabled="" class="bullet red svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />recreate constraints with clause mismatch
  <small>(1/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple constraints with a wrong clause 3`] = `
"<button disabled="" class="bullet redFixed svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />recreate constraints with clause mismatch
  <small>(2/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple constraints with a wrong clause 4`] = `
"<button disabled="" class="bullet red svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />recreate constraints with clause mismatch
  <small>(0/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple constraints with a wrong clause 5`] = `
"<button disabled="" class="bullet redFixed svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />recreate constraints with clause mismatch
  <small>(2/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple constraints with a wrong clause 6`] = `
"<button disabled="" class="bullet red svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />recreate constraints with clause mismatch
  <small>(1/2)</small></label
><br />
"
`;

exports[`Schema > should render a multiple constraints with a wrong clause 7`] = `
"<button disabled="" class="bullet red svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />recreate constraints with clause mismatch
  <small>(0/2)</small></label
><br />
"
`;

exports[`Schema > should render a normal table with constraints 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte"><button class="bullet svelte">+</button> myTable1Name</li>
</ul>
"
`;

exports[`Schema > should render a normal table with constraints 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button class="bullet svelte">+</button> myColumn1Name
      </li>
      <li class="svelte">
        <button disabled="" class="bullet svelte">.</button>
        <span class="nodeType svelte">pk</span> myTable1Constraint1Name<button
          class="clipboard svelte"
          title="myTable1Constraint1Name"
        >
          ▢
        </button>
      </li>
      <li class="svelte">
        <button disabled="" class="bullet svelte">.</button>
        <span class="nodeType svelte">pk</span> ~constraintTildeNameTable<button
          class="clipboard svelte"
          title="myTable1Name_constraintTildeNameTable"
        >
          ▢
        </button>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a normal table with constraints 3`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button class="bullet svelte">-</button> myColumn1Name
        myColumn1Type<button class="clipboard svelte" title="myColumn1Type">
          ▢
        </button>
        <ul>
          <li class="svelte">
            <button disabled="" class="bullet svelte">.</button>
            <span class="nodeType svelte">pk</span>
            myColumn1Constraint1Name<button
              class="clipboard svelte"
              title="myColumn1Constraint1Name"
            >
              ▢
            </button>
          </li>
          <li class="svelte">
            <button disabled="" class="bullet svelte">.</button>
            <span class="nodeType svelte">check</span>
            myColumn1Constraint2Name<button
              class="clipboard svelte"
              title="myColumn1Constraint2Name"
            >
              ▢
            </button>
            myColumn1Constraint2Clause<button
              class="clipboard svelte"
              title="myColumn1Constraint2Clause"
            >
              ▢
            </button>
          </li>
          <li class="svelte">
            <button disabled="" class="bullet svelte">.</button>
            <span class="nodeType svelte">pk</span>
            ~ConstraintTildeNameColumn<button
              class="clipboard svelte"
              title="myTable1Name_myColumn1Name_ConstraintTildeNameColumn"
            >
              ▢
            </button>
          </li>
          <li class="svelte">
            <button disabled="" class="bullet svelte">.</button>
            <span class="nodeType svelte">check</span>
            myColumn1ConstraintArrowName<button
              class="clipboard svelte"
              title="myColumn1ConstraintArrowName"
            >
              ▢
            </button>
            myColumn1ConstraintArrowClause hsqldb:⬁ mysql:⬁ second hsqldb:⬁
            mysql:⬁<button
              class="clipboard svelte"
              title='myColumn1ConstraintArrowClause hsqldb:"myColumn1Name" mysql:\`myColumn1Name\` second hsqldb:"myColumn1Name" mysql:\`myColumn1Name\`'
            >
              ▢
            </button>
          </li>
        </ul>
      </li>
      <li class="svelte">
        <button disabled="" class="bullet svelte">.</button>
        <span class="nodeType svelte">pk</span> myTable1Constraint1Name<button
          class="clipboard svelte"
          title="myTable1Constraint1Name"
        >
          ▢
        </button>
      </li>
      <li class="svelte">
        <button disabled="" class="bullet svelte">.</button>
        <span class="nodeType svelte">pk</span> ~constraintTildeNameTable<button
          class="clipboard svelte"
          title="myTable1Name_constraintTildeNameTable"
        >
          ▢
        </button>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a normal table without constraints 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte"><button class="bullet svelte">+</button> myTable1Name</li>
</ul>
"
`;

exports[`Schema > should render a normal table without constraints 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button class="bullet svelte">+</button> myColumn1Name
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a normal table without constraints 3`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button class="bullet svelte">-</button> myColumn1Name
        myColumn1Type<button class="clipboard svelte" title="myColumn1Type">
          ▢
        </button>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a sequence with an additional error 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button disabled="" class="bullet red svelte">.</button>
    <span class="nodeType svelte">sequence</span> myOnlyName myType<button
      class="clipboard svelte"
      title="myType"
    >
      ▢
    </button>
    55<button class="clipboard svelte" title="55">▢</button>
    <ul>
      <li class="svelte">additionalErrors1</li>
      <li class="svelte">additionalErrors2</li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a sequence with wrong start 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button disabled="" class="bullet red svelte">.</button>
    <span class="nodeType svelte">sequence</span> myOnlyName myType<button
      class="clipboard svelte"
      title="myType"
    >
      ▢
    </button>
    <span class="red svelte">start mismatch:</span>
    <table class="comparison svelte">
      <tbody>
        <tr>
          <td class="svelte">required:</td>
          <td class="svelte">
            55<button class="clipboard svelte" title="55">▢</button>
          </td>
        </tr>
        <tr>
          <td class="svelte">actual:</td>
          <td class="svelte">
            66<button class="clipboard svelte" title="66">▢</button>
          </td>
        </tr>
      </tbody>
    </table>
  </li>
</ul>
"
`;

exports[`Schema > should render a sequence with wrong type 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button disabled="" class="bullet red svelte">.</button>
    <span class="nodeType svelte">sequence</span> myOnlyName
    <span class="red svelte">type mismatch:</span>
    <table class="comparison svelte">
      <tbody>
        <tr>
          <td class="svelte">required:</td>
          <td class="svelte">
            myType<button class="clipboard svelte" title="myType">▢</button>
          </td>
        </tr>
        <tr>
          <td class="svelte">actual:</td>
          <td class="svelte">
            myTypeX<button class="clipboard svelte" title="myTypeX">▢</button>
          </td>
        </tr>
      </tbody>
    </table>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
</ul>
"
`;

exports[`Schema > should render a table with an additional error 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a table with an additional error 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">additionalErrors1</li>
      <li class="svelte">additionalErrors2</li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused NOT NULL column 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a unused NOT NULL column 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button class="bullet red svelte">+</button> myColumn1Name
        <span class="red svelte">unused</span>
        <label><input type="checkbox" />drop</label>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused NOT NULL column 3`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button class="bullet red svelte">-</button> myColumn1Name
        <span class="red svelte">unused</span>
        <label><input type="checkbox" />drop</label> myColumn1Type<button
          class="clipboard svelte"
          title="myColumn1Type"
        >
          ▢
        </button>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused column 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet yellow svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet yellow svelte">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a unused column 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet yellow svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet yellow svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button class="bullet yellow svelte">+</button> myColumn1Name
        <span class="yellow svelte">unused</span>
        <label><input type="checkbox" />drop</label>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused column 3`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet yellow svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet yellow svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button class="bullet yellow svelte">-</button> myColumn1Name
        <span class="yellow svelte">unused</span>
        <label><input type="checkbox" />drop</label> myColumn1Type<button
          class="clipboard svelte"
          title="myColumn1Type"
        >
          ▢
        </button>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused column 4`] = `
"<li class="svelte">"ALTER TABLE myTable1Name DROP COLUMN myColumn1Name",</li>
"
`;

exports[`Schema > should render a unused column to be renamed to a missing 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTableName
    <ul>
      <li class="svelte">
        <button class="bullet red svelte">+</button> myUnusedColumnName
        <span class="red svelte">unused</span>
        <label><input type="checkbox" />drop</label>
        <label
          ><select class="renameTo svelte">
            <option value="<NONE>">rename to ...</option>
            <option value="myMissingColumnName">myMissingColumnName</option>
            <option value="myMissingColumnName2">myMissingColumnName2</option>
          </select></label
        >
      </li>
      <li class="svelte">
        <button class="bullet red svelte">+</button> myMissingColumnName
        <span class="red svelte">missing</span>
        <label><input type="checkbox" />add</label>
        <label
          ><select class="renameFrom svelte">
            <option value="<NONE>">rename from ...</option>
            <option value="myUnusedColumnName">myUnusedColumnName</option>
          </select></label
        >
      </li>
      <li class="svelte">
        <button class="bullet red svelte">+</button> myMissingColumnName2
        <span class="red svelte">missing</span>
        <label><input type="checkbox" />add</label>
        <label
          ><select class="renameFrom svelte">
            <option value="<NONE>">rename from ...</option>
            <option value="myUnusedColumnName">myUnusedColumnName</option>
          </select></label
        >
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused column to be renamed to a missing 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTableName
    <ul>
      <li class="svelte">
        <button class="bullet redFixed svelte">+</button> myUnusedColumnName
        <span class="redFixed svelte">unused</span>
        <label><input type="checkbox" />drop</label>
        <label
          ><select class="renameTo svelte">
            <option value="<NONE>">rename to ...</option>
            <option value="myMissingColumnName">myMissingColumnName</option>
            <option value="myMissingColumnName2">myMissingColumnName2</option>
          </select></label
        >
      </li>
      <li class="svelte">
        <button class="bullet red svelte">+</button> myMissingColumnName
        <span class="red svelte">missing</span>
        <label><input type="checkbox" />add</label>
        <label
          ><select class="renameFrom svelte">
            <option value="<NONE>">rename from ...</option>
            <option value="myUnusedColumnName">myUnusedColumnName</option>
          </select></label
        >
      </li>
      <li class="svelte">
        <button class="bullet red svelte">+</button> myMissingColumnName2
        <span class="red svelte">missing</span>
        <label><input type="checkbox" />add</label>
        <label
          ><select class="renameFrom svelte">
            <option value="<NONE>">rename from ...</option>
            <option value="myUnusedColumnName">myUnusedColumnName</option>
          </select></label
        >
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused column to be renamed to a missing 3`] = `
"<li class="svelte">
  "ALTER TABLE \\"myTableName\\" ALTER COLUMN \\"myUnusedColumnName\\" RENAME TO
  \\"myMissingColumnName\\"",
</li>
"
`;

exports[`Schema > should render a unused constraint 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">+</button> myTable1Name
  </li>
</ul>
"
`;

exports[`Schema > should render a unused constraint 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet red svelte">-</button> myTable1Name
    <ul>
      <li class="svelte">
        <button disabled="" class="bullet red svelte">.</button>
        <span class="nodeType svelte">check</span> myConstraint1Name<button
          class="clipboard svelte"
          title="myConstraint1Name"
        >
          ▢
        </button>
        <span class="red svelte">unused</span>
        <label><input type="checkbox" />drop</label> myConstraint1Clause<button
          class="clipboard svelte"
          title="myConstraint1Clause"
        >
          ▢
        </button>
      </li>
    </ul>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused constraint 3`] = `
"<li class="svelte">
  "ALTER TABLE myTable1Name DROP CONSTRAINT myConstraint1Name",
</li>
"
`;

exports[`Schema > should render a unused sequence 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet yellow svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button disabled="" class="bullet yellow svelte">.</button>
    <span class="nodeType svelte">sequence</span> myOnlyName
    <span class="yellow svelte">unused</span>
    <label><input type="checkbox" />drop</label> myType<button
      class="clipboard svelte"
      title="myType"
    >
      ▢
    </button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused sequence 2`] = `
"<li class="svelte">"DROP SEQUENCE myOnlyName",</li>
"
`;

exports[`Schema > should render a unused sequence to be renamed to a missing 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button disabled="" class="bullet yellow svelte">.</button>
    <span class="nodeType svelte">sequence</span> myUnusedSequenceName
    <span class="yellow svelte">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingSequenceName">myMissingSequenceName</option>
        <option value="myMissingSequenceName2">myMissingSequenceName2</option>
      </select></label
    >
    someType<button class="clipboard svelte" title="someType">▢</button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
  <li class="svelte">
    <button disabled="" class="bullet red svelte">.</button>
    <span class="nodeType svelte">sequence</span> myMissingSequenceName
    <span class="red svelte">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedSequenceName">myUnusedSequenceName</option>
      </select></label
    >
    someType<button class="clipboard svelte" title="someType">▢</button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
  <li class="svelte">
    <button disabled="" class="bullet red svelte">.</button>
    <span class="nodeType svelte">sequence</span> myMissingSequenceName2
    <span class="red svelte">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedSequenceName">myUnusedSequenceName</option>
      </select></label
    >
    someType<button class="clipboard svelte" title="someType">▢</button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused sequence to be renamed to a missing 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button disabled="" class="bullet yellowFixed svelte">.</button>
    <span class="nodeType svelte">sequence</span> myUnusedSequenceName
    <span class="yellowFixed svelte">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingSequenceName">myMissingSequenceName</option>
        <option value="myMissingSequenceName2">myMissingSequenceName2</option>
      </select></label
    >
    someType<button class="clipboard svelte" title="someType">▢</button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
  <li class="svelte">
    <button disabled="" class="bullet red svelte">.</button>
    <span class="nodeType svelte">sequence</span> myMissingSequenceName
    <span class="red svelte">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedSequenceName">myUnusedSequenceName</option>
      </select></label
    >
    someType<button class="clipboard svelte" title="someType">▢</button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
  <li class="svelte">
    <button disabled="" class="bullet red svelte">.</button>
    <span class="nodeType svelte">sequence</span> myMissingSequenceName2
    <span class="red svelte">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedSequenceName">myUnusedSequenceName</option>
      </select></label
    >
    someType<button class="clipboard svelte" title="someType">▢</button>
    55<button class="clipboard svelte" title="55">▢</button>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused sequence to be renamed to a missing 3`] = `
"<li class="svelte">
  "ALTER TABLE \\"myUnusedSequenceName\\" RENAME TO \\"myMissingSequenceName\\"",
</li>
"
`;

exports[`Schema > should render a unused table 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet yellow svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet yellow svelte">+</button> myTable1Name
    <span class="yellow svelte">unused</span>
    <label><input type="checkbox" />drop</label>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused table 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet yellow svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
  <label
    ><input type="checkbox" />drop unused nodes without rename-from option
    <small>(0/1)</small></label
  ><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet yellow svelte">-</button> myTable1Name
    <span class="yellow svelte">unused</span>
    <label><input type="checkbox" />drop</label>
  </li>
</ul>
"
`;

exports[`Schema > should render a unused table 3`] = `
"<li class="svelte">"DROP TABLE myTable1Name",</li>
"
`;

exports[`Schema > should render a unused table to be renamed to a missing 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet yellow svelte">+</button> myUnusedTableName
    <span class="yellow svelte">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingTableName">myMissingTableName</option>
        <option value="myMissingTableName2">myMissingTableName2</option>
      </select></label
    >
  </li>
  <li class="svelte">
    <button class="bullet red svelte">+</button> myMissingTableName
    <span class="red svelte">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedTableName">myUnusedTableName</option>
      </select></label
    >
  </li>
  <li class="svelte">
    <button class="bullet red svelte">+</button> myMissingTableName2
    <span class="red svelte">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedTableName">myUnusedTableName</option>
      </select></label
    >
  </li>
</ul>
"
`;

exports[`Schema > should render a unused table to be renamed to a missing 2`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet red svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul>
  <li class="svelte">
    <button class="bullet yellowFixed svelte">+</button> myUnusedTableName
    <span class="yellowFixed svelte">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select class="renameTo svelte">
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingTableName">myMissingTableName</option>
        <option value="myMissingTableName2">myMissingTableName2</option>
      </select></label
    >
  </li>
  <li class="svelte">
    <button class="bullet red svelte">+</button> myMissingTableName
    <span class="red svelte">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedTableName">myUnusedTableName</option>
      </select></label
    >
  </li>
  <li class="svelte">
    <button class="bullet red svelte">+</button> myMissingTableName2
    <span class="red svelte">missing</span>
    <label><input type="checkbox" />create</label>
    <label
      ><select class="renameFrom svelte">
        <option value="<NONE>">rename from ...</option>
        <option value="myUnusedTableName">myUnusedTableName</option>
      </select></label
    >
  </li>
</ul>
"
`;

exports[`Schema > should render a unused table to be renamed to a missing 3`] = `
"<li class="svelte">
  "ALTER TABLE \\"myUnusedTableName\\" RENAME TO \\"myMissingTableName\\"",
</li>
"
`;

exports[`Schema > should render an empty schema 1`] = `
"<div class="checkboxCollector svelte">
  <button disabled="" class="bullet svelte">.</button> Schema
  <button class="reload svelte">🗘</button> <br />
  <label><input type="checkbox" />show all tables / sequences</label><br />
</div>
<ul></ul>
"
`;

exports[`Schema > should render an error message 1`] = `
"schema: response code 400 myError
"
`;

exports[`Schema > should render multiple missing nodes 1`] = `
"<button disabled="" class="bullet red svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />add missing nodes without rename-from option
  <small>(0/5)</small></label
><br />
"
`;

exports[`Schema > should render multiple missing nodes 2`] = `
"<button disabled="" class="bullet red svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />add missing nodes without rename-from option
  <small>(1/5)</small></label
><br />
"
`;

exports[`Schema > should render multiple missing nodes 3`] = `
"<button disabled="" class="bullet red svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />add missing nodes without rename-from option
  <small>(2/5)</small></label
><br />
"
`;

exports[`Schema > should render multiple missing nodes 4`] = `
"<button disabled="" class="bullet red svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />add missing nodes without rename-from option
  <small>(3/5)</small></label
><br />
"
`;

exports[`Schema > should render multiple missing nodes 5`] = `
"<button disabled="" class="bullet red svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />add missing nodes without rename-from option
  <small>(4/5)</small></label
><br />
"
`;

exports[`Schema > should render multiple missing nodes 6`] = `
"<button disabled="" class="bullet redFixed svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />add missing nodes without rename-from option
  <small>(5/5)</small></label
><br />
"
`;

exports[`Schema > should render multiple missing nodes 7`] = `
"<button disabled="" class="bullet red svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />add missing nodes without rename-from option
  <small>(0/5)</small></label
><br />
"
`;

exports[`Schema > should render multiple missing nodes 8`] = `
"<button disabled="" class="bullet redFixed svelte">.</button> Schema
<button class="reload svelte">🗘</button> <br />
<label><input type="checkbox" />show all tables / sequences</label><br />
<label
  ><input type="checkbox" />add missing nodes without rename-from option
  <small>(5/5)</small></label
><br />
"
`;

exports[`Schema > should run patches 1`] = `
"<li class="svelte">"CREATE TABLE \\"myTable1Name\\"",</li>
<li class="svelte">"CREATE TABLE \\"myTable2Name\\"",</li>
"
`;

exports[`Schema > should run patches 2`] = `
"<li class="svelte">"CREATE TABLE \\"myTable1Name\\"", // 11&nbsp;rows, 1111ms</li>
<li class="svelte">"CREATE TABLE \\"myTable2Name\\"", // 22&nbsp;rows, 2222ms</li>
"
`;

exports[`Schema > should run patches 3`] = `
"<li class="svelte">"CREATE TABLE \\"myTable1Name\\"",</li>
<li class="svelte">"CREATE TABLE \\"myTable2Name\\"",</li>
"
`;

exports[`Schema > should run patches 4`] = `
"<li class="svelte">CREATE TABLE "myTable1Name"; -- 11&nbsp;rows, 1111ms</li>
<li class="svelte">CREATE TABLE "myTable2Name"; -- 22&nbsp;rows, 2222ms</li>
"
`;

exports[`Schema > should run patches with error 1`] = `
"<li class="failure svelte">
  "CREATE TABLE \\"myTable1Name\\"", <br />
  // table "myTable1Name" already exists
</li>
"
`;

exports[`Schema > should run patches with error 2`] = `
"<li class="failure svelte">
  CREATE TABLE "myTable1Name"; <br />
  -- table "myTable1Name" already exists
</li>
"
`;
